# h2h-research-v2

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  NOTICE.md  README.md  alembic.ini  docker-compose.yml  probe.py  pyproject.toml  summary.md
.github/workflows/: ci.yml
adapters/: __init__.py  base.py  chembl.py  clinicaltrials.py  opentargets.py  pubmed.py
backend/: __init__.py  cache.py  config.py  db.py  embeddings.py  entrypoint.sh  main.py  prewarm.py  refresh.py  schemas.py
backend/api/: __init__.py  cancers.py  chat.py  drugs.py  targets.py
backend/data/: cbioportal_study_map.csv  disease_source_map.csv  disease_source_map_coverage.md  mesh_disease_map.csv  sponsor_normalisation.csv
backend/domain/: __init__.py  disagreement.py  potency.py  selectivity.py  structure.py  synthesis.py  tdl.py
backend/eval/: __init__.py  grounding.py
backend/fixtures/: demo.json
backend/ingestion/: __init__.py  backfill_drug_targets.py  backfill_target_catalog.py  backfill_target_class.py  base.py  cancer_catalog.py  cbioportal.py  chembl.py  chembl_catalog.py  clinicaltrials.py  clinicaltrials_combinations.py  ctgov_cancer.py  enrich.py  enrich_cancer.py  enrich_target.py  eurostat.py  gene_ids.py  http.py  literature.py  load_cbioportal_map.py  load_disease_map.py  load_mesh_disease_map.py  load_sponsor_map.py  opentargets.py  pubmed.py  pubtator.py  scope_catalog.py  seed_demo.py  seer.py
backend/migrations/: env.py
backend/migrations/versions/: 0f0f806f8c5a_record_when_a_drug_s_literature_was_.py  7693de4f2523_track_when_a_drug_was_last_enriched.py  81d9d1e507eb_target_class_for_the_overview_facet.py  90aee02e0978_drug_catalog_and_fact_provenance.py  9fa3f02ee6bf_in_scope_for_oncology_catalog_scoping.py  a1b3c5d7e9f0_revalidate_selectivity_profile.py  a1b3c5d7e9f1_disease_source_map.py  b1c3d5e7f9a2_mesh_disease_map.py  (+18 more)
backend/models/: __init__.py  abstract.py  base.py  cancer.py  cancer_fact.py  cbioportal_study_map.py  change_event.py  disease_source_map.py  drug.py  drug_target.py  fact.py  mesh_disease_map.py  sponsor_normalisation.py  target.py  target_fact.py
backend/repositories/: __init__.py  cancers.py  change_feed.py  drugs.py  literature.py  targets.py
backend/services/: __init__.py  briefs.py  cancer_briefs.py  cbioportal_map.py  chat.py  chat_providers.py  disease_map.py  mesh_map.py  retrieval.py  sponsor_map.py  target_briefs.py
backend/tests/: conftest.py  test_adapters.py  test_alteration_frequency_source.py  test_api_drugs.py  test_api_targets.py  test_backfill_drug_targets.py  test_backfill_target_class.py  test_cancer_catalog.py  test_cancer_enrichment.py  test_cancer_facets.py  test_cbioportal.py  test_change_feed.py  test_chat.py  test_chembl_catalog.py  test_clinicaltrials_combinations.py  test_config.py  test_ctgov_cancer.py  test_disagreement.py  test_disease_map.py  test_disease_resolution.py  test_drug_target.py  test_enrich.py  test_epi_survival_sources.py  test_eurostat.py  test_fact_model.py  test_health.py  test_lazy_enrichment.py  test_literature.py  test_literature_repository.py  test_literature_wiring.py  test_load_cbioportal_map.py  test_load_mesh_disease_map.py  test_load_sponsor_map.py  test_nonblocking_read.py  test_ot_schema_smoke.py  test_output_boundary.py  test_overview_filters.py  test_potency.py  test_prewarm.py  test_pubtator.py  (+13 more)
docs/: outreach-d4.md  quality-audit.md  status.md
docs/specs/: usability-harness.md
experiment/: README.md  drugs.py  probe.py
experiment/adapters/: clinicaltrials.py  opentargets.py
experiment/spike/: REPORT.md
experiment/spike-backlog/: REPORT.md  s1_target_reverse.py  s2_tissue_agnostic.py  s3_combinations.py  s4_sponsors.py  s5_modality_vaccines.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: ask.spec.ts  brief.spec.ts  cancer.spec.ts  demo.convert.ts  demo.record.ts  global-setup.ts  overview.spec.ts  target.spec.ts
frontend/src/: App.test.tsx  App.tsx  association.test.ts  association.ts  format.test.ts  format.ts  index.css  main.tsx  mechanisms.test.ts  mechanisms.ts  phases.test.ts  phases.ts  physchem.test.ts  physchem.ts  targets.test.ts  targets.ts  titles.test.ts  titles.ts
stubs/rdkit/: __init__.pyi
(+157 files in other folders)
