[project]
name = "h2h-experiment"
version = "0.1.0"
description = "Source-probing spike for the H2H oncology evidence tool."
# Upper bound is load-bearing: without it uv resolves to its newest interpreter
# (3.14), for which several scientific wheels do not exist yet.
requires-python = ">=3.11,<3.14"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "rdkit>=2024.3.1",
]
