[project]
name = "h2h"
version = "0.1.0"
description = "Biochemistry-centered evidence tool for oncology drug programs."
# The upper bound is load-bearing: without it uv resolves to 3.14, where the
# scientific wheels (rdkit, numba downstream) do not exist yet.
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# experiment/ is the finished spike -- reference only, never part of the app build.
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["experiment", "backend/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
# The spike is finished code kept for reference; it is not on the app's import path.
exclude = ["^experiment/", "^backend/migrations/"]

[[tool.mypy.overrides]]
module = ["asgi_lifespan.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
