[project]
name = "h2h"
version = "0.1.0"
description = "Biochemistry-centered evidence tool for oncology drug programs."
# The upper bound is load-bearing: without it uv resolves to 3.14, where the
# scientific wheels (rdkit, numba downstream) do not exist yet.
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "httpx>=0.27",
    # Renders the structure SVG server-side. The molecule is the detail page's visual
    # anchor, and RDKit is also the only thing that can tell a valid SMILES from a
    # plausible string -- the spike proved that matters. Keeping it here rather than
    # shipping a JS chem library keeps one canonical renderer.
    "rdkit>=2024.3.1",
    "pgvector>=0.3",
    "fastembed>=0.4",
    "anthropic>=0.116",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# experiment/ is the finished spike -- reference only, never part of the app build.
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["experiment", "backend/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
# Our own rdkit stubs shadow the ones rdkit ships, which do not parse. See
# stubs/rdkit/Chem/__init__.pyi.
mypy_path = "stubs"
# The spike is finished code kept for reference; it is not on the app's import path.
exclude = ["^experiment/", "^backend/migrations/"]

[[tool.mypy.overrides]]
module = ["asgi_lifespan.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rdkit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
# live_ot hits the real Open Targets API, so it is deselected by default -- CI's unit path
# must not depend on a third party being up. Run it on demand with: pytest -m live_ot
addopts = "-m 'not live_ot'"
markers = [
    "live_ot: hits the live Open Targets GraphQL API; deselected by default (opt in with -m live_ot)",
]
